--- a/PsybaseBlazerElectron/PsybaseBlazerElectron.csproj
+++ b/PsybaseBlazerElectron/PsybaseBlazerElectron.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="8.31.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="electron.manifest.json">
